fix: websocket for both chat and notifications, notification with reference link; some miscellaneous img src, date format